<resources>
    <string name="app_name">Panchayat Sandesh</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up"> Sign up</string>
    <string name="splashlogo">splashLogo</string>
    <string name="forget_password">Forget Password?</string>
    <string name="backbutton">backbutton</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="citizenicon">citizenicon</string>
    <string name="citizen">Citizen</string>
    <string name="official">Official</string>
    <string name="enter_secret_key_if_you_are_offical">Enter secret key if you are offical</string>
    <string name="enter_secret_key">Enter Secret Key</string>
    <string name="enter_your_pincode">Enter Your Pincode</string>
    <string name="next">Next</string>
    <string name="arrowback">arrowback</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="user">user</string>
    <string name="choose_your_picture">Choose Your Picture</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_father_name">Enter Father Name</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_your_aadhar">Enter Your Aadhar</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="hi_nsign_up_now">Hi,\nSign Up Now</string>
    <string name="must_be_atleast_8_character">Must be atleast 8 character</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="both_password_must_match">Both password must match</string>
    <string name="if_you_are_olden">If you are olden,</string>


    <string-array name="District">
        <Item>Choose Your District</Item>
        <Item>Prayagraj</Item>
        <item>Bhadohi</item>
    </string-array>

    <string-array name="village">
        <Item>Choose Your Village</Item>
        <item>Mishree</item>
        <item>Tulapur</item>
    </string-array>
</resources>