<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    tools:context=".ChooseAccountType">
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_back"
        android:background="@drawable/arrowback"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center|left"
        tools:ignore="RtlHardcoded">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_nsign_up_now"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/purple"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="164dp" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:background="@drawable/edittextbox"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="8dp"
            android:textStyle="bold"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:background="@drawable/edittextbox"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_be_atleast_8_character"
            android:textStyle="bold"
            android:textColor="@color/grey"/>
        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="8dp"
            android:textStyle="bold"
            android:hint="@string/repeat_password"
            android:paddingLeft="10dp"
            android:background="@drawable/edittextbox"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both_password_must_match"
            android:textStyle="bold"
            android:textColor="@color/grey"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textSize="19sp"
            android:paddingLeft="23dp"
            android:background="@drawable/loginbtn"
            tools:ignore="RtlSymmetry"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:text="@string/if_you_are_olden"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/purple"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>