<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDetails"
    android:padding="25dp"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_back"
        android:background="@drawable/arrowback"
        android:contentDescription="@string/arrowback" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_your_details"
        android:textSize="25sp"
        android:textColor="@color/purple"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="2dp"
            android:padding="20dp"
            android:src="@drawable/citizen"
            android:contentDescription="@string/user" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/choose_your_picture"/>
    </LinearLayout>
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:hint="@string/enter_your_name"
        android:drawableStart="@drawable/name"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:background="@drawable/edittextbox"
        android:autofillHints="emailAddress"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:hint="@string/enter_father_name"
        android:drawableStart="@drawable/name"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:background="@drawable/edittextbox"
        android:autofillHints="emailAddress"
        android:inputType="text"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:hint="@string/enter_date_of_birth"
        android:drawableStart="@drawable/dob"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:background="@drawable/edittextbox"
        android:autofillHints="emailAddress"
        android:inputType="date"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:hint="@string/enter_your_aadhar"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:background="@drawable/edittextbox"
        android:autofillHints="emailAddress"
        android:inputType="number"
        tools:ignore="RtlSymmetry" />
    <Button
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:textSize="19sp"
        android:paddingStart="23dp"
        android:background="@drawable/loginbtn"
        tools:ignore="RtlSymmetry"
        />
</LinearLayout>