<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:gravity="center|left"
    android:padding="30dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/purple"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="164dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in_to_continue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/grey"/>
    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/edittextbox"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:textStyle="bold"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:background="@drawable/edittextbox"
        android:autofillHints="password"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="17sp"
        android:onClick="forgetPassword"
        android:text="@string/forget_password"/>
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="19sp"
        android:paddingLeft="23dp"
        android:background="@drawable/loginbtn"
        tools:ignore="RtlSymmetry"
        />

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:clickable="true"
            android:onClick="signUpClicked"/>

    </LinearLayout>

</LinearLayout>